--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ img {
     content: '';
     position: absolute;
     left: 0;
-    bottom: 4px;
+    bottom: 0;
     display: inline-block;
     width: 100%;
     height: 4px;
