--- a/sass/components/_section-titles.scss
+++ b/sass/components/_section-titles.scss
@@ -1,6 +1,6 @@
-.directions-section-title,
-.members-section-title,
-.clients-section-title {
+.directions__title,
+.members__title,
+.clients__title {
     margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
