--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,6 @@ body {
 }
 
 .logo {
-  margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
   color: #000000;
@@ -75,6 +74,10 @@ body {
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
+}
+
+.header__logo {
+  margin-right: 93px;
 }
 
 .logo-accent {
@@ -88,9 +91,9 @@ body {
   padding-bottom: 0;
 }
 
-.directions-section-title,
-.members-section-title,
-.clients-section-title {
+.directions__title,
+.members__title,
+.clients__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -112,15 +115,15 @@ body {
   margin-top: 16px;
 }
 
-.soc-media-item:last-child {
+.soc-media__item:last-child {
   margin-right: 0;
 }
 
-.soc-media-item {
+.soc-media-list__item {
   margin-right: 10px;
 }
 
-.soc-media-item a {
+.soc-media-list__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -131,13 +134,13 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc-media-item a:hover,
-.soc-media-item a:focus {
+.soc-media-list__link:hover,
+.soc-media-list__link:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
 }
 
-.soc-media-icon {
+.soc-media-list__icon {
   fill: currentColor;
 }
 
@@ -154,17 +157,17 @@ body {
           align-items: baseline;
 }
 
-.site-nav .list {
+.site-nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.site-nav-item:not(:last-of-type) {
+.site-nav__item:not(:last-of-type) {
   margin-right: 50px;
 }
 
-.site-nav-link {
+.site-nav__link {
   padding-bottom: 32px;
   padding-top: 32px;
   text-decoration: none;
@@ -174,6 +177,10 @@ body {
   color: var(--title-text-color);
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav__link:hover, .site-nav__link:focus {
+  color: var(--accent-color);
 }
 
 .current-page {
@@ -193,11 +200,6 @@ body {
   background-color: var(--accent-color);
 }
 
-.site-nav-link:hover,
-.site-nav-link:focus {
-  color: var(--accent-color);
-}
-
 /* Контакты */
 .contacts {
   display: -webkit-box;
@@ -209,11 +211,11 @@ body {
   margin-left: auto;
 }
 
-.contact-item:not(:last-child) {
+.contacts__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contact-link {
+.contacts__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -231,12 +233,11 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
 }
 
-.contact-icon {
+.contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -249,7 +250,7 @@ body {
   text-align: center;
 }
 
-.hero-title {
+.hero__title {
   width: 696px;
   margin-bottom: 30px;
   margin-left: auto;
@@ -262,7 +263,7 @@ body {
   color: var(--primary-white-color);
 }
 
-.hero-button {
+.hero__button {
   display: inline-block;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -280,22 +281,18 @@ body {
   cursor: pointer;
 }
 
-.features-section-title {
-  font-size: 0;
-}
-
-.feature-list {
+.features__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   list-style: none;
 }
 
-.feature-list-item:not(:last-of-type) {
+.features__item:not(:last-of-type) {
   margin-right: 30px;
 }
 
-.feature-icon-container {
+.features__icon-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -312,38 +309,38 @@ body {
   background-color: var(--medium-background-color);
 }
 
-.feature-title {
+.features__title {
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--title-text-color);
 }
 
-.feature-description {
+.features__description {
   margin-top: 10px;
   line-height: 1.71;
 }
 
-.directions-section {
+.directions {
   padding-top: 0;
 }
 
-.directions-section .list {
+.directions__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.directions-item {
+.directions__item {
   position: relative;
   margin-right: 30px;
 }
 
-.directions-item:nth-child(3n) {
+.directions__item:nth-child(3n) {
   margin-right: 0;
 }
 
-.direction-overlay {
+.directions__overlay {
   position: absolute;
   z-index: 2;
   bottom: 0;
@@ -353,7 +350,7 @@ body {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.overlay-text {
+.directions__text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -372,7 +369,7 @@ body {
   color: var(--primary-white-color);
 }
 
-.members-section {
+.members {
   background-color: var(--medium-background-color);
 }
 
@@ -382,7 +379,7 @@ body {
   display: flex;
 }
 
-.members-list-item {
+.members-list__item {
   margin-right: 30px;
   background: var(--primary-white-color);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -390,11 +387,11 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.members-list-item:nth-child(4n) {
+.members-list__item:nth-child(4n) {
   margin-right: 0;
 }
 
-.member-name {
+.members-list__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -402,14 +399,14 @@ body {
   color: var(--title-text-color);
 }
 
-.member-description {
+.members-list__description {
   margin-top: 10px;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
 
-.members-list-item div {
+.members-list__item-wrapper {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -740,5 +737,239 @@ body {
 
 .icon-send {
   margin-left: 10px;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 1;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 3;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  max-width: 528px;
+  width: 100%;
+  max-height: 581px;
+  height: 100%;
+  background-color: var(--primary-white-color);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--primary-white-color);
+  color: #000000;
+  cursor: pointer;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+  color: var(--accent-color);
+}
+
+.close-icon {
+  width: 11px;
+  height: 11px;
+  fill: currentColor;
+}
+
+.modal-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 40px;
+}
+
+.modal-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  color: var(--title-text-color);
+}
+
+.modal-field {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.modal-label {
+  display: inline-block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+
+.modal-field-wrapper {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.input-icon {
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.comment-area {
+  padding: 12px 16px;
+  height: 120px;
+  resize: none;
+}
+
+.comment-area::-webkit-input-placeholder {
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.comment-area:-ms-input-placeholder {
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.comment-area::-ms-input-placeholder {
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.comment-area::placeholder {
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.policy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  line-height: 1.71;
+}
+
+.policy-link {
+  color: var(--accent-color);
+}
+
+.checked-icon {
+  border: 1px solid;
+  border-color: var(--title-text-color);
+  margin-right: 8px;
+  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check:checked + .policy .checked-icon {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.modal-submit-button {
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  border-radius: 4px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.15);
+          box-shadow: rgba(0, 0, 0, 0.15);
+}
+
+.modal-submit-button:hover,
+.modal-submit-button:focus {
+  background-color: #188CE8;
+}
+
+.modal.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=main.css.map */
