--- a/sass/components/_soc-media-list.scss
+++ b/sass/components/_soc-media-list.scss
@@ -4,13 +4,13 @@
     align-items: center;
     margin-top: 16px;
 }
-.soc-media-item:last-child{
+.soc-media__item:last-child{
     margin-right: 0;
 }
-.soc-media-item{
+.soc-media-list__item{
     margin-right: 10px;
 }
-.soc-media-item a{
+.soc-media-list__link{
     display: flex;
     padding: 12px;
     border-radius: 50%;
@@ -18,11 +18,11 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.soc-media-item a:hover,
-.soc-media-item a:focus{
+.soc-media-list__link:hover,
+.soc-media-list__link:focus{
     background-color: var(--accent-color);
     color: var(--primary-white-color);
 }
-.soc-media-icon{
+.soc-media-list__icon{
     fill: currentColor;
 }
