--- a/sass/layout/_directions-section.scss
+++ b/sass/layout/_directions-section.scss
@@ -1,34 +1,36 @@
-.directions-section{
+.directions{
     padding-top: 0;
-}
-.directions-section .list{
-    display: flex;
-}
-.directions-item{
-    position: relative;
-    margin-right: 30px;
-}
-.directions-item:nth-child(3n){
-    margin-right: 0;
-}
-.direction-overlay{
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);
-}
-.overlay-text{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-    font-weight: 700;
-    line-height: 1.14px;
-    text-align: center;
-    text-transform: uppercase;
-    color: var(--primary-white-color);
+
+    &__list{
+        display: flex;
+    }
+    &__item{
+        position: relative;
+        margin-right: 30px;
+    
+        &:nth-child(3n){
+            margin-right: 0;
+        }
+    }
+    &__overlay{
+        position: absolute;
+        z-index: 2;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 70px;
+        background-color: rgba(47, 48, 58, 0.8);
+    }
+    &__text{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+        font-weight: 700;
+        line-height: 1.14px;
+        text-align: center;
+        text-transform: uppercase;
+        color: var(--primary-white-color);
+    }
 }
