--- a/sass/layout/_features-section.scss
+++ b/sass/layout/_features-section.scss
@@ -1,33 +1,29 @@
-.features-section-title {
-    font-size: 0;
-}
-
-.feature-list {
-    display: flex;
-    list-style: none;
-}
-.feature-list-item:not(:last-of-type){
-    margin-right: 30px;
-}
-.feature-icon-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 270px;
-    height: 120px;
-    border-radius: 4px;
-    margin-bottom: 30px;
-    background-color: var(--medium-background-color);
-}
-
-
-.feature-title {
-    font-weight: 700;
-    line-height: 1.14;
-    text-transform: uppercase;
-    color: var(--title-text-color);
-}
-.feature-description {
-    margin-top: 10px;
-    line-height: 1.71;
+.features{
+    &__list {
+        display: flex;
+        list-style: none;
+    }
+    &__item:not(:last-of-type){
+        margin-right: 30px;
+    }
+    &__icon-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 270px;
+        height: 120px;
+        border-radius: 4px;
+        margin-bottom: 30px;
+        background-color: var(--medium-background-color);
+    }
+    &__title {
+        font-weight: 700;
+        line-height: 1.14;
+        text-transform: uppercase;
+        color: var(--title-text-color);
+    }
+    &__description {
+        margin-top: 10px;
+        line-height: 1.71;
+    }
 }
