--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,70 +5,75 @@
     display: flex;
     align-items: baseline;
 }
-.site-nav .list{
-    display: flex;  
-}
-.site-nav-item:not(:last-of-type){
-    margin-right: 50px;
-}
+.site-nav {
+    &__list{
+    display: flex; 
+    }
 
-.site-nav-link{
-    padding-bottom: 32px;
-    padding-top: 32px;
-    text-decoration: none;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--title-text-color);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &__item:not(:last-of-type){
+        margin-right: 50px;
+    }
+
+    &__link{
+        padding-bottom: 32px;
+        padding-top: 32px;
+        text-decoration: none;
+        font-weight: 500;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: var(--title-text-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &__link:hover,
+    &__link:focus{
+        color: var(--accent-color);
+    }
 }
 .current-page {
     color: var(--accent-color);
     position: relative;
-}
-.current-page::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    display: inline-block;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-}
-.site-nav-link:hover,
-.site-nav-link:focus{
-    color: var(--accent-color);
+
+    &::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: inline-block;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--accent-color);
+    }
 }
 /* Контакты */
 .contacts{
     display: flex;
     align-items: center;
     margin-left: auto;
-}
-.contact-item:not(:last-child) {
-    margin-right: 50px;
-}
 
-.contact-link{
-    display: flex;
-    align-items: center;
-    padding-bottom: 32px;
-    padding-top: 32px;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    text-decoration: none;
-    color: inherit;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contact-link:hover,
-.contact-link:focus{
-    color: var(--accent-color);
-}
+    &__item:not(:last-child) {
+        margin-right: 50px;
+    }
 
-.contact-icon{
-    margin-right: 10px;
-    fill: currentColor;
+    &__link{
+        display: flex;
+        align-items: center;
+        padding-bottom: 32px;
+        padding-top: 32px;
+        font-weight: 500;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        color: inherit;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &__link:hover,
+    &__link:focus{
+        color: var(--accent-color);
+    }
+
+    &__icon{
+        margin-right: 10px;
+        fill: currentColor;
+    }
 }
