--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,23 +8,22 @@
         url(../images/hero.back.jpg),
         var(--dark-background-color);
     text-align: center;
-   
 
-}
-.hero-title {
-    width: 696px;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--primary-white-color);
+    &__title {
+        width: 696px;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: var(--primary-white-color);
 
+    }
 }
-.hero-button{
+.hero__button{
     display: inline-block;
     border: 1px solid transparent;
     border-radius: 4px;
