--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -11,10 +11,10 @@
 .header__logo{
     margin-right: 93px;
 }
-.logo-accent {
+.logo--accent {
     color: var(--accent-color);
 }
-.footer .logo{
+.footer__logo{
     color: var(--primary-white-color);
     margin-right: 0;
     padding-top: 0;
