--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,7 +29,7 @@
         color: var(--accent-color);
     }
 }
-.current-page {
+.site-nav__link--current {
     color: var(--accent-color);
     position: relative;
 
