--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,47 +3,50 @@
     padding-bottom: 60px;
     background-color: var(--dark-background-color);
 }
+.footer .container{
+    display: flex;
+    align-items: baseline;
+}
 
 .address{
     margin-top: 20px;
     font-style:inherit;
     line-height: 1.71;
     color: var(--primary-white-color);
+
+    &__list,
+    &__list:last-child{
+        margin-top: 9px;
+    }
+    &__link{
+        text-decoration: none;
+        font-style: inherit;
+        line-height: 1.71;
+        color: rgba(255, 255, 255, 0.6);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus{
+            color: var(--accent-color);
+        }
+    }
 }
-.address .list,
-.address .phone{
-    margin-top: 9px;
-}
-.address-link{
-    text-decoration: none;
-    font-style: inherit;
-    line-height: 1.71;
-    color: rgba(255, 255, 255, 0.6);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.address-link:hover,
-.address-link:focus{
-    color: var(--accent-color);
-}
-.footer .container{
-    display: flex;
-    align-items: baseline;
-}
-.soc-media-container{
+.soc-media{
     margin-left: 70px;
-}
-.soc-media-title{
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    line-height: 1.14;
-    color: var(--primary-white-color);
-}
-.footer-media-link{
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-}
-.footer-media-link .soc-media-icon{
-    fill: var(--primary-white-color);
+
+    &__title{
+        margin-bottom: 20px;
+        text-transform: uppercase;
+        line-height: 1.14;
+        color: var(--primary-white-color);
+    }
+    &__link{
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 50%;
+    }
+    &__icon--dark{
+        fill: var(--primary-white-color);
+    }
 }
 /* Форма футера */
 .subscribe-form{
