--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -48,7 +48,8 @@
         fill: var(--primary-white-color);
     }
 }
-/* Форма футера */
+
+/* Форма для футера */
 .subscribe-form{
     display: flex;
     align-items: flex-end;
