--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './components/logo';
 @import './components/section-titles';
 @import './components/soc-media-list';
+@import './components/modal';
 
 
 @import './layout/header';
@@ -16,4 +17,4 @@
 @import './layout/clients-section';
 @import './layout/projects-section';
 @import './layout/footer';
-@import './layout/modal';
+
