--- a/sass/layout/_members-section.scss
+++ b/sass/layout/_members-section.scss
@@ -1,3 +1,8 @@
+.members-section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+    margin: auto;
+}
 .members {
     background-color: var(--medium-background-color);
 
